...
    <string name="authentication_placeholderEmptyScore">Error</string>
    <string name="authentication_noActionDoneYet">Either log in with your Google account or fill in credentials to create an account or log in</string>
    <string name="authentication_createAcc">Create Account</string>
    <string name="authentication_logIn">Log in</string>
    <string name="authentication_googleLogIn">Log in with Google</string>
    <string name="authentication_forgotPassword">Forgot Password</string>
    <string name="authentication_emptyField">Empty email or password</string>
    <string name="authentication_notAnEmail">Not an email</string>
    <string name="authentication_shortPassword">Password has to be at least 6 symbols</string>
    <string name="authentication_resetPasswordError">Failed to send password recovery email</string>
    <string name="authentication_welcomeToVibester">Welcome to Vibester</string>

    <!-- QrScanning -->
    <string name="qrScanning_scannerClosed">Scanner has been closed</string>
    <string name="qrScanning_cameraError">Camera Permission should be granted for that feature</string>
    <string name="qrScanning_noExistUid">Error not an existing uid</string>
    <string name="qrScanning_newFriend">Congratulations, you have a new friend</string>

    <!-- GameSetup -->
    <string name="GameSetup_internetSwitchOn">Internet is on</string>
    <string name="GameSetup_internetSwitchOff">Internet is off</string>
    <string name="GameSetup_easy">Easy</string>
    <string name="GameSetup_medium">Medium</string>
    <string name="GameSetup_hard">Hard</string>
    <string name="GameSetup_ask_difficulty">Please choose the difficulty of your game</string>
    <string name="gameSetup_offlineGame">Offline Game</string>
    <string name="gameSetup_offlineBuzzer">Offline Buzzer</string>
...
