<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    android:noHistory="true">

        <LinearLayout
            android:id="@+id/chooseGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/selectGameType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="54dp"
                android:fontFeatureSettings="smcp"
                android:text="@string/holder_setup_game_type"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/game_setup_check_internet"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/game_setup_has_internet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/GameSetup_internetSwitchOn" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/offline_game_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/gameSetup_offlineGame"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/horilayer_offline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/offline_game_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="@string/gameSetup_offlineBuzzer"
                            android:textColor="@color/white"
                            android:translationZ="10dp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/download"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="Download"
                            android:textColor="@color/white"
                            android:translationZ="10dp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="45dp" />

                    <TextView
                        android:id="@+id/singleplayer_game_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Singleplayer"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/horilayer_single"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/local_typing_game_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="@string/game_typing"
                            android:textColor="@color/white"
                            android:translationZ="10dp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:visibility="visible" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/local_lyrics_game_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="@string/game_lyrics"
                            android:textColor="@color/white"
                            android:translationZ="10dp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:visibility="gone" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="Button"
                            android:textColor="@color/white"
                            android:translationZ="10dp"
                            android:visibility="gone" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="45dp" />

                    <TextView
                        android:id="@+id/multiplayer_game_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Multiplayer"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/horilayer_multi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/local_buzzer_game_button"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="@string/game_buzzer_title"
                            android:textColor="@color/white"
                            android:translationZ="10dp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/online_buzzer_game_button"
                            android:layout_width="88dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
                            android:stateListAnimator="@null"
                            android:text="@string/online_game_buzzer_title"
                            android:textColor="@color/white"
                            android:translationZ="10dp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>